objects/TASKRAY__Project__c.object
<CustomObject>
    <description>This is the primary TaskRay object for projects.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <fields>
        <fullName>CUSTOM_Client_dept_s__c</fullName>
        <label>Client dept(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All NCS</fullName>
                </value>
                <value>
                    <fullName>Central Marketing</fullName>
                </value>
                <value>
                    <fullName>Curriculum and Grads</fullName>
                </value>
                <value>
                    <fullName>Customer Services</fullName>
                </value>
                <value>
                    <fullName>Inclusion</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Programmes</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Staffing</fullName>
                </value>
                <value>
                    <fullName>NCS Trust</fullName>
                </value>
                <value>
                    <fullName>HeadStart</fullName>
                </value>
                <value>
                    <fullName>All Step Forward</fullName>
                </value>
                <value>
                    <fullName>Step Forward Account Management</fullName>
                </value>
                <value>
                    <fullName>Step Forward Delivery</fullName>
                </value>
                <value>
                    <fullName>Step Forward Matching</fullName>
                </value>
                <value>
                    <fullName>Step Forward Sales</fullName>
                </value>
                <value>
                    <fullName>Public Affairs</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Legal dept</fullName>
                </value>
                <value>
                    <fullName>Legal requirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CUSTOM_External_dev_reference__c</fullName>
        <label>External dev. reference #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOM_Project_summary__c</fullName>
        <label>Project summary</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ChatterGroupSharingIds__c</fullName>
        <label>Share to Chatter Groups (ID)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ChatterGroupSharingNames__c</fullName>
        <label>Share to Chatter Groups (Name)</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ProjectColor__c</fullName>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_End__c</fullName>
        <label>Project End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Child Projects</relationshipLabel>
        <relationshipName>Project_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Start__c</fullName>
        <label>Project Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__TextColor__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualHours__c</fullName>
        <label>Actual Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentage__c</fullName>
        <label>Completion Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <label>TaskRay Project</label>
    <listViews>
        <fullName>TASKRAY__AllProjects</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TASKRAY__Project_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__Archived_and_Templates</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>TASKRAY__trTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Archived and Templates</label>
    </listViews>
    <listViews>
        <fullName>Templates</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>TEMPLATE</value>
        </filters>
        <label>Templates</label>
        <sharedTo>
            <group>Systems</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>TASKRAY__Project_Member_added_in_TaskRay__c</fullName>
        <label>Project Contributor added in TaskRay</label>
    </sharingReasons>
    <validationRules>
        <fullName>TASKRAY__No_spaces_in_Nickname</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( TASKRAY__trNickname__c  ,&quot;.*\\s+.*&quot;)</errorConditionFormula>
        <errorMessage>Project Nicknames cannot have spaces</errorMessage>
    </validationRules>
</CustomObject>